--- a/docker/local/django/Dockerfile
+++ b/docker/local/django/Dockerfile
@@ -11,7 +11,7 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
     build-essential \
     libpq-dev
 
-COPY ./requirements .
+COPY ./dynamic-blog-api/requirements .
 
 RUN pip wheel --wheel-dir /usr/src/app/wheels \
     -r ${BUILD_ENVIRONMENT}.txt
