--- a/local.yml
+++ b/local.yml
@@ -11,8 +11,8 @@ services:
             - ./dynamic-blog-api:/app
             - static_volume:/app/staticfiles
             - media_volume:/app/mediafiles
-        ports:
-            - "8000:8000"
+        expose:
+            - "8000"
         env_file:
             - ./.envs/.local/.django
             - ./.envs/.local/.postgres
@@ -41,6 +41,22 @@ services:
         container_name: mailhog
         ports:
             - "8025:8025"
+        networks:
+            - dynamic-blog-network
+
+    nginx:
+        build:
+            context: ./docker/local/nginx
+            dockerfile: Dockerfile
+        restart: always
+        container_name: nginx
+        depends_on:
+            - api
+        volumes:
+            - static_volume:/app/staticfiles
+            - media_volume:/app/mediafiles
+        ports:
+            - "8080:80"
         networks:
             - dynamic-blog-network
 
