Fixed typo to 'use_parentheses'

--- a/dynamic-blog-api/setup.cfg
+++ b/dynamic-blog-api/setup.cfg
@@ -10,4 +10,4 @@ multi_line_output = 3
 skip_glob = **/migrations/*.py
 include_trailing_comma = true
 force_grid_wrap = 0
-use_paraenthese = true
+use_parentheses = true
