--- a/docker/local/django/Dockerfile
+++ b/docker/local/django/Dockerfile
@@ -47,6 +47,14 @@ COPY ./docker/local/django/start /start
 RUN sed -i 's/\r$//g' /start
 RUN chmod +x /start
 
+COPY ./docker/local/django/celery/worker/start-celeryworker /start-celeryworker
+RUN sed -i 's/\r$//g' /start-celeryworker
+RUN chmod +x /start-celeryworker
+
+COPY ./docker/local/django/celery/flower/start-flower /start-flower
+RUN sed -i 's/\r$//g' /start-flower
+RUN chmod +x /start-flower
+
 COPY ./dynamic-blog-api ${APP_HOME}
 
 ENTRYPOINT ["/entrypoint"]
